<resources>
    <string name="app_name">RxTest</string>
    <string name="handle_create">创建操作符</string>
    <string name="schedulers">线程调度</string>
    <string name="create_observer">create()操作</string>
    <string name="create_observer2">链式create()操作</string>
    <string name="change_thread">切换线程</string>
    <string name="same_thread">相同线程</string>
    <string name="request_test">request test</string>
    <string name="transform">转换操作符</string>
    <string name="transform_map">转换操作符Map</string>
    <string name="transform_flatmap">转换操作符FlatMap</string>
    <string name="request_transform_test">request transform test</string>
    <string name="donext_scheduler">doNext处理后的线程转换</string>
    <string name="tran_zip">zip操作符</string>
    <string name="back_pressure">Back Pressure</string>
    <string name="event_cache">缓存事件大小OOM</string>
    <string name="sync_subscribe">同步订阅</string>
    <string name="async_subscribe">异步订阅</string>
    <string name="avoid_oom">防止内存溢出</string>
    <string name="subscription_request">Subscription的request方法</string>
    <string name="back_pressure_way">4种背压策略：</string>
    <string name="back_pressures_error">BackpressureStrategy.ERROR</string>
    <string name="back_pressures_buffer">BackpressureStrategy.BUFFER</string>
    <string name="back_pressures_drop">BackpressureStrategy.DROP</string>
    <string name="back_pressures_latest">BackpressureStrategy.LATEST</string>
</resources>
