<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handle_create"/>
    <Button
        android:id="@+id/btn_schedulers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedulers"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_transform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transform"
        />
    <Button
        android:id="@+id/btn_back_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back_pressure"
        />

    <Button
        android:id="@+id/btn_view_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="view model"
        />
</LinearLayout>